; ModuleID = '/home/carl/AnghaBench/seafile/daemon/extr_seafile-config.c_config_get_string.c'
source_filename = "/home/carl/AnghaBench/seafile/daemon/extr_seafile-config.c_config_get_string.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [41 x i8] c"SELECT value FROM Config WHERE key='%s';\00", align 1
@get_value = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32*, i8*)* @config_get_string to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @config_get_string(i32* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca [256 x i8], align 16
  %7 = alloca i8*, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* null, i8** %7, align 8
  %8 = getelementptr inbounds [256 x i8], [256 x i8]* %6, i64 0, i64 0
  %9 = load i8*, i8** %5, align 8
  %10 = call i32 @snprintf(i8* %8, i32 256, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str, i64 0, i64 0), i8* %9)
  %11 = load i32*, i32** %4, align 8
  %12 = getelementptr inbounds [256 x i8], [256 x i8]* %6, i64 0, i64 0
  %13 = load i32, i32* @get_value, align 4
  %14 = call i64 @sqlite_foreach_selected_row(i32* %11, i8* %12, i32 %13, i8** %7)
  %15 = icmp slt i64 %14, 0
  br i1 %15, label %16, label %17

16:                                               ; preds = %2
  store i8* null, i8** %3, align 8
  br label %19

17:                                               ; preds = %2
  %18 = load i8*, i8** %7, align 8
  store i8* %18, i8** %3, align 8
  br label %19

19:                                               ; preds = %17, %16
  %20 = load i8*, i8** %3, align 8
  ret i8* %20
}

declare dso_local i32 @snprintf(i8*, i32, i8*, i8*) #1

declare dso_local i64 @sqlite_foreach_selected_row(i32*, i8*, i32, i8**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
